gcc 	PR c/29172: 	* c-opts.c (c_common_parse_file): Call cpp_clear_file_cache. libcpp 	PR c/29172: 	* internal.h (struct cpp_reader) <file_hash_entries>: Changed 	type. 	<file_hash_entries_allocated, file_hash_entries_used>: Removed. 	* files.c (FILE_HASH_POOL_SIZE): New macro. 	(struct file_hash_entry_pool): New. 	(destroy_all_cpp_files): New function. 	(allocate_file_hash_entries): Allocate a file_hash_entry_pool. 	(new_file_hash_entry): Update. 	(free_file_hash_entries): New function. 	(_cpp_cleanup_files): Call free_file_hash_entries and 	destroy_all_cpp_files. 	(cpp_clear_file_cache): New function. 	* include/cpplib.h (cpp_clear_file_cache): Declare.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@130656 138bc75d-0d04-0410-961f-82ee72b054a4